src/styles/Orders.css
/* ... */
.orders-list-wrapper h3 {
  padding-left: 10px;
  border-bottom: 1px solid var(--border);
  padding-bottom: 10px;
  margin-bottom: 0px;
  font-size: 1rem;
  font-weight: 500;
}
.order-settings-wrapper {
  position: relative;
}
.order-settings-dropdown {
  right: 0;
}
.order-client-header-wrapper {
  display: flex;
  gap: 10px;
}
.order-client-header-wrapper .profile-pic-wrapper .profile-image {
  height: 32px;
  width: 32px;
}
.order-profile-wrapper {
  display: flex;
  flex-direction: column;
  /* gap: 10px; */
}
.order-profile-wrapper h4 {
  margin: 0;
}
.order-client-wrapper p {
  margin: 0;
}
.order-page-top-bar {
  margin: 5px 15px;
  display: flex;
  gap: 10px;
}
.order-sales-wrapper {
  display: flex;
  gap: 10px;
  font-size: 0.9rem;
  align-items: center;
}

.order-sales-wrapper .user-selector-wrapper {
  display: flex;
}
.order-client-wrapper {
  display: flex;
  gap: 10px;
  font-size: 0.9rem;
  align-items: center;
}
.order-filter {
  display: flex;
  padding-left: 6px !important;
}
.order-filter-dropdown-wrapper {
  position: relative;
}
.order-filter-dropdown-item {
  display: flex;
  gap: 15px;
  align-items: center;
  justify-content: space-between;
}
.order-filter-dropdown-span {
  display: flex;
  gap: 15px;
  align-items: center;
}
.order-filter-button {
  padding: 5px 12px;
  border: 0px;
  border-radius: 10px;
  display: flex;
  align-items: center;
  gap: 5px;
  transition: 150ms;
}
.order-filter-x-wrapper {
  display: flex;
  padding: 0px 3px;
  border-radius: 4px;
}
.filter-icon-wrapper {
  transition: 200ms;
  display: flex;
  width: 12px;
}
.hidden-filter {
  opacity: 0;
}
.filter-icon {
  fill: var(--grey);
  stroke: var(--grey);
}
.order-filter-x-wrapper:hover {
  background-color: var(--dark-teal);
  color: var(--white);
}
.order-filter-x {
  width: 8px;
}
.active-filter {
  background-color: var(--light-teal);
  color: var(--dark-teal);
}
.active-filter:hover {
  background-color: var(--hover-light-teal);
}
.orders-filter-box-wrapper {
  display: flex;
  align-items: center;
  padding-bottom: 10px;
  gap: 5px;
}
.orders-search-input {
  border: 1px solid var(--border);
  border-radius: 25px;
  padding: 6px 14px;
  min-width: 175px;
  font-size: 0.8rem;
}
.orders-search-input:active,
.orders-search-input:focus-within {
  outline: none;
}
.order-sort-wrapper {
  position: relative;
  display: flex;
  gap: 5px;
}
.order-sort-filter-button {
  display: flex;
  align-items: center;
  gap: 5px;
  font-size: 0.8rem;
  background-color: var(--white);
  padding: 6px 12px;
  border-radius: 50px;
}

.order-sort-filtered {
  background-color: var(--light-teal);
  color: var(--dark-teal);
  border-color: var(--light-teal);
}
.order-sort-filtered:hover {
  background-color: var(--hover-light-teal);
}

.order-sort-filter-x-wrapper {
  display: flex;
  margin-left: 5px;
  transition: 150ms;
}
.order-sort-filter-x-wrapper:hover {
  background-color: var(--dark-teal);
  color: white;
  padding: 1px 3px;
  border-radius: 3px;
}

.order-sort-filter-x {
  width: 8px;
  /* padding: 3px; */
}
.order-sort-direction {
  border-radius: 50px;
  padding: 0 7px;
  background-color: var(--light-teal);
  color: var(--dark-teal);
  border-color: var(--light-teal);
  display: flex;
  align-items: center;
  justify-content: center;
}
.order-sort-direction:hover {
  background-color: var(--hover-light-teal);
  border-color: var(--hover-light-teal);
}
.order-sort-direction svg {
  width: 13px;
}

.order-items-list {
  border: 1px solid var(--border);
  height: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  width: 100%;
  overflow-x: scroll;
  overscroll-behavior: none;
  margin: 0px 15px 15px;
}
.order-items-list-head {
  font-weight: 500;
}
.orders-list-head {
  padding: 0 !important;
}

.orders-list-item > div {
  border-left: 1px solid var(--border);
  padding: 6px 12px;
  display: flex;
  align-items: center;
}
.orders-list-item > div:first-child {
  border: 0px;
}
.orders-list-heading {
  padding: 9px 12px !important;
}
.user-width {
  display: flex;
  min-width: 65px;
}
.orders-list-head:hover {
  background-color: var(--white) !important;
  cursor: default !important;
}
.order-items-list-item {
  display: grid;
  grid-template-columns:
    minmax(40px, 0.2fr)
    minmax(100px, 0.4fr) minmax(200px, 1fr) minmax(100px, 0.65fr)
    minmax(75px, 0.75fr) minmax(100px, 0.5fr) minmax(100px, 0.5fr) minmax(
      250px,
      2fr
    )
    minmax(250px, 2fr)
    minmax(250px, 2fr) minmax(50px, 0.5fr);
  align-items: center;
  min-width: max-content;
  gap: 10px;
  padding: 6px 12px;
  border-bottom: 1px solid var(--border);
  font-size: 0.9rem;
  background-color: var(--white);
  width: 100%;
  white-space: nowrap;
  position: relative;
}
.order-items-list-item-wrapper {
  min-width: max-content;
}
.order-input {
  padding: 8px 12px;
  border: 1px solid var(--border);
  border-radius: 5px;
  overflow: scroll;
}
.order-input,
.input-heading {
  min-width: 100px;
}
.order-item-carat {
  padding: 6px 8px;
  border-radius: 5px;
  cursor: pointer;
}
.order-item-carat:hover {
  background-color: var(--hover);
}
.carat-toggled {
  transform: rotate(180deg);
  transition: 100ms;
}
.picker-heading {
  /* min-width: 150px; */
}
.vendor-row {
  display: flex;
  flex-direction: column;
  padding-bottom: 15px;
  border-bottom: 1px solid var(--border);
}
.vendor-row-head,
.vendor-row-inputs {
  display: grid;
  gap: 10px;
  font-size: 0.9rem;
  background-color: var(--white);
  border-bottom: 1px solid var(--border);
  padding: 6px 12px;
  width: 100%;
  white-space: nowrap;
}
.order-item-settings {
  position: relative;
}
.order-item-settings-dropdown {
  right: 50%;
}
.order-item-settings-item {
  display: flex;
  align-items: center;
  gap: 10px;
}
.order-item-icons {
  fill: #525252;
}
/* ... */

